--- a/week3/1-poly-linear.ipynb
+++ b/week3/1-poly-linear.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "capacity = 10\n",
     "\n",
-    "poly_x = tf.concat(1, [x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10])\n",
+    "poly_x = tf.concat([x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10], 1)\n",
     "poly_init = tf.random_uniform([capacity+1,1], minval=-1.0, maxval=1.0, dtype=tf.float32)\n",
     "poly_w = tf.Variable(poly_init, dtype=tf.float32, name='w')\n",
     "poly_model = tf.matmul(poly_x, poly_w)\n",
